# TalkCoach

./: .gitignore  .gitmodules  .swiftlint.yml  CLAUDE.md
.claude/: settings.json
.github/workflows/: ci.yml
LangDetectSpike/: Package.swift  REPORT.md  evaluate_all.sh  run_option_c.sh
LangDetectSpike/recordings/: README.md  en_01.caf  en_02.caf  en_03.caf  en_04.caf  es_01.caf  es_02.caf  es_03.caf  es_04.caf  (+9 more)
MicCoexistSpike/: Package.swift  REPORT.md
MicTapTightenSpike/: Package.swift  REPORT.md
ParakeetRustSpike/: Cargo.toml
ParakeetRustSpike/src/: main.rs
ParakeetSpike/: Package.swift  REPORT.md
PowerSpike/: Package.swift  REPORT.md
Scripts/: GenerateIcons.swift
ShoutingSpike/: Package.swift  REPORT.md
SileroVADSpike/: .gitignore  Cargo.toml
SileroVADSpike/src/: main.rs
TalkCoach/: ContentView.swift  Item.swift  Logger+Subsystem.swift  TalkCoach.entitlements  TalkCoachApp.swift
TalkCoach.xcodeproj/: project.pbxproj
TalkCoachTests/: TalkCoachTests.swift
TalkCoachUITests/: TalkCoachUITests.swift
TokenStabilitySpike/: Package.swift  REPORT.md  run_all.sh
WPMSpike/: Package.swift  results.csv
design/: widget-reference.html
docs/: 00_COLLABORATION_INSTRUCTIONS.md  01_PROJECT_JOURNAL.md  02_PRODUCT_SPEC.md  03_ARCHITECTURE.md  04_BACKLOG.md  05_SPIKES.md  06_PHASE1_PROMPTS.md  07_RELEASE_PLAN.md  08_TIME_LEDGER.md  M3.7.4_SMOKE_GATE.md  PROMPT_ENGINEERING_RESEARCH.md  RELEASE.md  session-050-bootstrap.md  session-051-bootstrap-pathB.md
scripts/: ExportOptions.plist  release.sh
tools/: state-timeline.example.csv  state-timeline.py
(+970 files in other folders)
