[package]
name = "parakeet-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
# VERIFY at Gate 0: if crates.io lookup fails, switch to the git source below
parakeet-rs = "0.3"
# parakeet-rs = { git = "https://github.com/altunenes/parakeet-rs" }

hound      = "3"
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
csv        = "1"
sysinfo    = "0.33"
